@@ -252,6 +252,12 @@ SKIP: {
         },
         'get_interface_state ok');
 
+    is($orchestrator->get_appliance_ipsla_configs($test_appliance->{id}),
+        hash {
+            etc();
+        },
+        'get_appliance_ipsla_configs ok');
+
     is($orchestrator->list_applianceids_by_templategroupname(
         $ENV{NET_SILVERPEAK_ORCHESTRATOR_POLICY}),
         array {
